--- a/index.html
+++ b/index.html
@@ -37,20 +37,17 @@ h1,h2,h3,h4,h5,h6 {
 
 /* ................Styling for navigation................................ */
 .btn-size {
-    padding: 19px;
-    padding-left: 65px;
-    padding-right: 65px;
-    border-radius: 6px;
+   width: 204px;
+   height: 60px;
+   border-radius: 6px;
 }  
 
 .btn-colour {
     background-color: #AA05D9 !important;
-    color: #ffffff;
-    text-decoration: none;
 }
 
 
-.btn-colour:hover {
+.btn-colour a, .btn-colour a:hover {
     text-decoration: none;
     color: #FFFFFF;
 }
@@ -66,6 +63,13 @@ h1,h2,h3,h4,h5,h6 {
 /* ................Styling for Hero section................................ */
 .hero-heading h1 {
     width: 100%;
+}
+
+.hero-heading h2 {
+    width: 55%;
+}
+
+.hero-heading h2, .hero-heading h1 {
     font-size: 70px;
     font-weight: 700;
     margin-left: 1.5rem;
@@ -81,7 +85,8 @@ h1,h2,h3,h4,h5,h6 {
 .hero-heading-item-3 {
     margin-top: 1rem;
     margin-bottom: 0;
-    font-size: 22px;
+    font-size: 16px;
+    color: #727272;
 }
 
 .hero-gradient img {
@@ -299,11 +304,9 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .cta-button {
-    padding: 19px;
-    padding-left: 65px;
-    padding-right: 65px;
+    width: 152px;
+    height: 60px;
     border-radius: 6px;
-    text-align: center;
 }
 
 .btns {
@@ -431,7 +434,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .btn-hide {
-    display: none;
+    visibility: hidden;
 }
 
 
@@ -457,6 +460,13 @@ h1,h2,h3,h4,h5,h6 {
 
     .hero-heading-item, .hero-heading-item-2 {
         display: none;
+    }
+
+    .hero-heading-item-3 {
+        margin-top: 1rem;
+        margin-bottom: 2rem;
+        font-size: 16px;
+        text-align: center;
     }
 
     .hero-gradient img:nth-child(2) {
@@ -510,7 +520,6 @@ h1,h2,h3,h4,h5,h6 {
     }
 
 
-
     .what-we-offer {
         margin-top: 3rem;
         min-height: 850px;
@@ -535,6 +544,7 @@ h1,h2,h3,h4,h5,h6 {
         font-size: 34px;
         font-weight: bold;
         text-align: center;
+        margin-top: 1.2rem;
     }
 
     .offer-image {
@@ -546,7 +556,7 @@ h1,h2,h3,h4,h5,h6 {
     }
 
     .how-we-work {
-        min-height: 80vh;
+        min-height: 60vh;
     }
 
     .rounded-corners {
@@ -561,6 +571,7 @@ h1,h2,h3,h4,h5,h6 {
 
     .how-we-work-heading {
         text-align: center;
+        margin-top: 3rem;
     }
 
     .how-we-work-heading h5  {
@@ -578,7 +589,12 @@ h1,h2,h3,h4,h5,h6 {
     }
 
     .cta-button {
-        margin-top: 0rem;
+        margin-top: 1rem;
+        margin-bottom: 3rem;
+    }
+
+    .btns {
+        margin-top: 2rem;
     }
 
     .btn-see-all {
@@ -587,6 +603,10 @@ h1,h2,h3,h4,h5,h6 {
 
     .footer-contents {
         margin-top: 0;
+    }
+
+    .list-inline {
+    margin-left: 2rem
     }
 
     .font-worksans {
@@ -657,6 +677,6 @@ h1,h2,h3,h4,h5,h6 {
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime.adebd3e575d0566a.js" type="module"></script><script src="polyfills.22c67716466a580c.js" type="module"></script><script src="main.dbedc2a25c5c6514.js" type="module"></script>
+<script src="runtime.adebd3e575d0566a.js" type="module"></script><script src="polyfills.22c67716466a580c.js" type="module"></script><script src="main.f0f3e2daa8ce3bb4.js" type="module"></script>
 
 </body></html>
