--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
   <style>
    @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@600&display=swap');
-@font-face {
+   @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+/* @font-face {
     font-family: 'Gilroy';
     src:url('../buildit/font/gilroy/Gilroy-Black.ttf') format('truetype');
     src:url('../buildit/font/gilroy/Gilroy-Bold.ttf') format('truetype');
     src:url('../buildit/font/gilroy/Gilroy-Heavy.ttf') format('truetype');
     src:url('../buildit/font/gilroy/Gilroy-Light.ttf') format('truetype');
     src:url('../buildit/font/gilroy/Gilroy-Regular.ttf') format('truetype');
-}
+} */
 
 html, body {
     overflow-x: hidden;
@@ -27,7 +28,7 @@ html {
 
 body {
     position: relative;
-    font-family: 'Gilroy', sans-serif;
+    font-family: 'Roboto', sans-serif;
     background: #FFF7F1 !important;
 }
 
@@ -59,6 +60,7 @@ h1,h2,h3,h4,h5,h6 {
 .nav-link {
     color: #131313;
     font-size: 14px !important;
+    font-weight: 300;
 }
 /* ................Styling for Hero section................................ */
 .hero-heading h1 {
@@ -78,20 +80,25 @@ h1,h2,h3,h4,h5,h6 {
 .hero-heading-item-2 {
     margin-top: 6rem;
     margin-bottom: 0;
-    font-size: 22px;
+    font-size: 24px;
     color: #727272;
+    font-weight: 300;
 }
 
 .hero-heading-item-3 {
     margin-top: 1rem;
     margin-bottom: 0;
     font-size: 16px;
+    font-weight: 300;
     color: #727272;
+}
+
+.gradient-img {
+    border-radius: 10px;
 }
 
 .hero-gradient img {
     height: 405px;
-    width: 100%;
 }
 
 .hero-gradient img:nth-child(2) {
@@ -105,7 +112,7 @@ h1,h2,h3,h4,h5,h6 {
 /* ................Styling for Project section................................ */
 .projects-heading h2 {
     font-size: 48px;
-    font-weight: 200;
+    font-weight: 300;
     margin-top: 4rem;
     margin-bottom: 4rem;
 }
@@ -215,7 +222,7 @@ h1,h2,h3,h4,h5,h6 {
 
 .how-we-work-heading {
     padding-top: 4rem;
-    margin-top: 6rem;
+    margin-top: 4rem;
 }
 
 .how-we-work-heading h5 {
@@ -257,6 +264,10 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 /* ................Styling for portfolio section................................ */
+.portfolio-heading p {
+    color: #939393;
+}
+
 .portfolio-item img {
     width: 559px;
     height: 419.25px;
@@ -417,6 +428,7 @@ h1,h2,h3,h4,h5,h6 {
 
 .form-fields input[type='radio'] {
     margin-top: 1rem;
+    margin-right: 0.5rem;
 }
 
 .form-fields p {
@@ -556,7 +568,7 @@ h1,h2,h3,h4,h5,h6 {
     }
 
     .how-we-work {
-        min-height: 60vh;
+        min-height: 80vh;
     }
 
     .rounded-corners {
@@ -677,6 +689,6 @@ h1,h2,h3,h4,h5,h6 {
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime.adebd3e575d0566a.js" type="module"></script><script src="polyfills.22c67716466a580c.js" type="module"></script><script src="main.f0f3e2daa8ce3bb4.js" type="module"></script>
+<script src="runtime.adebd3e575d0566a.js" type="module"></script><script src="polyfills.22c67716466a580c.js" type="module"></script><script src="main.c18009ff4f6ab12d.js" type="module"></script>
 
 </body></html>
