made changes to the website

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ h1,h2,h3,h4,h5,h6 {
 
 .gradient-img {
     border-radius: 10px;
+    display: block !important;
 }
 
 .hero-gradient img {
@@ -489,8 +490,8 @@ h1,h2,h3,h4,h5,h6 {
         margin-right: auto;
     }
 
-    .hero-gradient img:first-child {
-        display: none;
+    .gradient-img {
+        display: none !important;
     }
 
     .hero-gradient {
@@ -685,10 +686,16 @@ h1,h2,h3,h4,h5,h6 {
     }
 
 }
+
+/* @media (min-width: 768px) {
+.col-md-5 {
+    flex: 0 0 auto;
+}
+} */
   </style>
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime.adebd3e575d0566a.js" type="module"></script><script src="polyfills.22c67716466a580c.js" type="module"></script><script src="main.c18009ff4f6ab12d.js" type="module"></script>
+<script src="runtime.adebd3e575d0566a.js" type="module"></script><script src="polyfills.22c67716466a580c.js" type="module"></script><script src="main.6f956fe5365c192c.js" type="module"></script>
 
 </body></html>
